# alloc_hook

./: CMakeLists.txt  README.md  build_android.sh  version_script.ld
backtrace/: CMakeLists.txt
backtrace/driver/mtk_camera/: camera_mem.h
backtrace/include/: Config.h  PointerData.h  malloc_debug.h
backtrace/src/: Config.cpp  PointerData.cpp  malloc_debug.cpp
src/: alloc_hook.cpp
test/: CMakeLists.txt  alloc_hook_test.cpp
test/gl_test/: CMakeLists.txt  RendererES3.cpp  gles3jni.cpp
test/util/: gtest_utils.h  utils.cpp
